Fri Oct 12 14:01:25 CDT 2001  Linas Vepstas <linas@linas.org>

        * ctree.c, ctree.h, prefs.c: bugfix: redraw columns when
          changing column visibility.

Fri Oct 05 11:20:18 2001  George Lebl <jirka@5z.com>

	* Makefile.am, journal.c, plug-in.c, prefs.c, props-invl.c,
	  props-proj.c, props-task.c, util.[ch]:  Add a function for 
	  getting the GladeXML from the right directory.

	* glade/Makefile.am: dist all glade files

Thu Oct 04 21:37:11 2001  George Lebl <jirka@5z.com>

	* ghtml.c: more 64bit fixes.  Guile uses int and not size_t for the
	  sizes of strings apparently.  It's kind of evil.

Thu Oct 04 21:23:01 2001  George Lebl <jirka@5z.com>

	* Makefile.am: fix make dist

	* journal.c: fix 64bit issue with saving, and hide the print button
	  for now since it doesn't work yet

	* main.c: remove the initial warning, this is a stable gnome-utils
	  release

Wed Sep 26 18:45:32 CDT 2001  Linas Vepstas <linas@linas.org>

	* proj.[ch], proj-props.c, xml-read.c xml-write.c:
	  add support for a to-do list.

	* proj.[ch], file-io.c, prefs.[ch], ctree.c: add weekly, 
          monthly time totals

	* proj.[ch], xml-read.c, xml-write.c, ghtml.c: : add 
          billing status field

Sun Sep 23 15:17:30 CDT 2001  Linas Vepstas <linas@linas.org>

	* menucmd.c, toolbar.c: use the focus row, not the 
	  current project, as the target of menu operations.

	* err-throw.c: add canonical error messages 

	* main.c: modify order of intialization, in prep for 
	  SQL and other data sources.

	* file-io.c: add support for alternate data sources 
	  (e.g. sql work being done by Thomas Lang?s)

	* ctree.c, menus.c: add support for showing & editing 
	  the task memo from the main window

Wed Sep 19 10:17:58 CDT 2001  Linas Vepstas <linas@linas.org>

	* xml-read.c: changes to minimize likelyhood of loss
	  of data if some weird i/o error occurs.

Thu Sep 13 13:11:19 CDT 2001  Linas Vepstas <linas@linas.org>

	* prefs.[ch], options.c: transition user preferences