@@ -3,6 +3,8 @@ Fri Oct 12 14:01:25 CDT 2001  Linas Vepstas <linas@linas.org>
         * ctree.c, ctree.h, prefs.c: bugfix: redraw columns when
           changing column visibility.
 
+        * ctree.c: bugfix: set rational default column widths
+
 Fri Oct 05 11:20:18 2001  George Lebl <jirka@5z.com>
 
 	* Makefile.am, journal.c, plug-in.c, prefs.c, props-invl.c,
